# Ouchi-Face-typeC

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py
backend/ouchi_face_backend/: application.py
backend/ouchi_face_backend/api/: deps.py
backend/ouchi_face_backend/api/routes/: resources.py
backend/ouchi_face_backend/core/: config.py
backend/ouchi_face_backend/db/: fts.py  session.py
backend/ouchi_face_backend/models/: event.py  resource.py
backend/ouchi_face_backend/schemas/: resource.py
backend/ouchi_face_backend/services/: health_monitor.py  ouchi_parser.py  repo_sync.py  resource_service.py
backend/ouchi_face_backend/utils/: slugify.py
frontend/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/new/: page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/browse/: page.tsx
frontend/app/r/[slug]/: page.tsx
frontend/components/: manual-resource-form.tsx  providers.tsx  resource-card.tsx  resource-filter-bar.tsx
frontend/lib/: api.ts  status-style.ts
tests/: test_resource_service.py
